Renamed JS files (removed .download extension) and updated HTML references. (Removed Service Worker script if applicable).

--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
   <title>2048: Jessica Nigri Edition</title>
   <link href="2048%20-%20Nigri_files/main.css" rel="stylesheet" type="text/css">
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
-  <script src="2048%20-%20Nigri_files/jquery.min.js.download"></script>
+  <script src="2048%20-%20Nigri_files/jquery.min.js"></script>
 
 <style>
 
@@ -306,23 +306,9 @@ $(document).keypress(function(event) {
   </div>
   
 
-  <script src="2048%20-%20Nigri_files/glom.js.download"></script>
+  <script src="2048%20-%20Nigri_files/glom.js"></script>
   <div class="preload">
   <img src="2048%20-%20Nigri_files/k8vFtIo.jpg" class="preload"><img src="2048%20-%20Nigri_files/DF3uFPC.jpg" class="preload"><img src="2048%20-%20Nigri_files/nigri-bouncing.gif" class="preload"><img src="2048%20-%20Nigri_files/GdhI7mV.gif" class="preload"><img src="2048%20-%20Nigri_files/tumblr_mpr9b2ohKX1qgim5io1_400.gif" class="preload"><img src="2048%20-%20Nigri_files/z2LVMeK.gif" class="preload"><img src="2048%20-%20Nigri_files/Jjft7vj.gif" class="preload"><img src="2048%20-%20Nigri_files/iDJ5dDL8sSvRk.gif" class="preload"><img src="2048%20-%20Nigri_files/giphy-101.gif" class="preload"><img src="2048%20-%20Nigri_files/600full-my-profile.jpg" class="preload"><img src="2048%20-%20Nigri_files/600full-my-profile(1).jpg" class="preload">  
 	 </div>
-
-    <script>
-    if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/service-worker.js')
-            .then(registration => {
-              console.log('ServiceWorker registration successful with scope: ', registration.scope);
-            })
-            .catch(err => {
-              console.log('ServiceWorker registration failed: ', err);
-            });
-        });
-      }
-    </script>
 </body>
 </html>
