Fixed case sensitivity for 2048 - Nigri_Files folder path in index.htm for GitHub Pages

--- a/index.htm
+++ b/index.htm
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>2048: Jessica Nigri Edition</title>
-  <link href="2048%20-%20Nigri_files/main.css" rel="stylesheet" type="text/css">
+  <link href="2048%20-%20Nigri_Files/main.css" rel="stylesheet" type="text/css">
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
-  <script src="2048%20-%20Nigri_files/jquery.min.js"></script>
+  <script src="2048%20-%20Nigri_Files/jquery.min.js"></script>
 
 <style>
 
@@ -306,9 +306,9 @@ $(document).keypress(function(event) {
   </div>
   
 
-  <script src="2048%20-%20Nigri_files/glom.js"></script>
+  <script src="2048%20-%20Nigri_Files/glom.js"></script>
   <div class="preload">
-  <img src="2048%20-%20Nigri_files/k8vFtIo.jpg" class="preload"><img src="2048%20-%20Nigri_files/DF3uFPC.jpg" class="preload"><img src="2048%20-%20Nigri_files/nigri-bouncing.gif" class="preload"><img src="2048%20-%20Nigri_files/GdhI7mV.gif" class="preload"><img src="2048%20-%20Nigri_files/tumblr_mpr9b2ohKX1qgim5io1_400.gif" class="preload"><img src="2048%20-%20Nigri_files/z2LVMeK.gif" class="preload"><img src="2048%20-%20Nigri_files/Jjft7vj.gif" class="preload"><img src="2048%20-%20Nigri_files/iDJ5dDL8sSvRk.gif" class="preload"><img src="2048%20-%20Nigri_files/giphy-101.gif" class="preload"><img src="2048%20-%20Nigri_files/600full-my-profile.jpg" class="preload"><img src="2048%20-%20Nigri_files/600full-my-profile(1).jpg" class="preload">  
+  <img src="2048%20-%20Nigri_Files/k8vFtIo.jpg" class="preload"><img src="2048%20-%20Nigri_Files/DF3uFPC.jpg" class="preload"><img src="2048%20-%20Nigri_Files/nigri-bouncing.gif" class="preload"><img src="2048%20-%20Nigri_Files/GdhI7mV.gif" class="preload"><img src="2048%20-%20Nigri_Files/tumblr_mpr9b2ohKX1qgim5io1_400.gif" class="preload"><img src="2048%20-%20Nigri_Files/z2LVMeK.gif" class="preload"><img src="2048%20-%20Nigri_Files/Jjft7vj.gif" class="preload"><img src="2048%20-%20Nigri_Files/iDJ5dDL8sSvRk.gif" class="preload"><img src="2048%20-%20Nigri_Files/giphy-101.gif" class="preload"><img src="2048%20-%20Nigri_Files/600full-my-profile.jpg" class="preload"><img src="2048%20-%20Nigri_Files/600full-my-profile(1).jpg" class="preload">  
 	 </div>
 </body>
 </html>
