Ensure all core JS/CSS files are tracked and pushed. Cleaned up extraneous references in index.htm. Fix tile-1024 extension.

--- a/index.htm
+++ b/index.htm
@@ -99,7 +99,7 @@ body {
   
     
     .tile-1024 .tile-inner {
-      background-image: url(images/tile-1024.jpg) !important; 
+      background-image: url(images/tile-1024.gif) !important; 
     }
   
     
@@ -308,7 +308,6 @@ $(document).keypress(function(event) {
 
   <script src="2048%20-%20Nigri_Files/glom.js"></script>
   <div class="preload">
-  <img src="2048%20-%20Nigri_Files/k8vFtIo.jpg" class="preload"><img src="2048%20-%20Nigri_Files/DF3uFPC.jpg" class="preload"><img src="2048%20-%20Nigri_Files/nigri-bouncing.gif" class="preload"><img src="2048%20-%20Nigri_Files/GdhI7mV.gif" class="preload"><img src="2048%20-%20Nigri_Files/tumblr_mpr9b2ohKX1qgim5io1_400.gif" class="preload"><img src="2048%20-%20Nigri_Files/z2LVMeK.gif" class="preload"><img src="2048%20-%20Nigri_Files/Jjft7vj.gif" class="preload"><img src="2048%20-%20Nigri_Files/iDJ5dDL8sSvRk.gif" class="preload"><img src="2048%20-%20Nigri_Files/giphy-101.gif" class="preload"><img src="2048%20-%20Nigri_Files/600full-my-profile.jpg" class="preload"><img src="2048%20-%20Nigri_Files/600full-my-profile(1).jpg" class="preload">  
 	 </div>
 </body>
 </html>
