--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,6 @@ body {
 }
 
 /* Ensure specific block elements within the wrapper also have auto margins if they have fixed widths */
-/* These rules apply to all screen sizes */
 .container,
 .game-container {
     margin-left: auto;
@@ -42,16 +41,12 @@ body {
 }
 
 .tile-text {
-    display: inline-block;
+    display:inline-block;
     vertical-align: middle;
 }
 
 /* lol !important */
-.tile-inner {
-    background-position: center center !important;
-    background-size: cover !important;
-    background-repeat: no-repeat !important;
-}
+.tile-inner { background-position: center center !important; background-size: cover !important; background-repeat: no-repeat !important; }
 
 /* Your existing tile background images (make sure these are all correct from previous fixes) */
 .tile-2 .tile-inner { background-image: url(Images/tile-2.gif) !important; }
@@ -63,89 +58,34 @@ body {
 .tile-128 .tile-inner { background-image: url(Images/tile-128.gif) !important; }
 .tile-256 .tile-inner { background-image: url(Images/tile-256.gif) !important; }
 .tile-512 .tile-inner { background-image: url(Images/tile-512.gif) !important; }
-.tile-1024 .tile-inner { background-image: url(Images/tile-1024.gif) !important; } /* Make sure this is .gif now! */
+.tile-1024 .tile-inner { background-image: url(Images/tile-1024.gif) !important; }
 .tile-2048 .tile-inner { background-image: url(Images/tile-2048.gif) !important; }
 
 /* Existing text/color rules if any */
 .thisistext, p, a, h1 { color: #ba17d1; }
 .game-container { background-color: #c19bea }
 
-
-/* --- MEDIA QUERIES FOR RESPONSIVENESS (These should come last) --- */
-
-/* Adjustments for screens smaller than 500px (typical mobile portrait) */
+/* ONLY THIS PART OF THE MEDIA QUERY SHOULD REMAIN FOR NOW */
 @media (max-width: 500px) {
     .game-wrapper {
-        max-width: 100%; /* Allow it to take up full width */
-        padding: 20px 15px 0px 15px; /* Adjust padding for mobile to give some breathing room */
-        margin: 10px auto; /* Reduce top margin slightly */
+        max-width: 100%;
+        padding: 20px 15px 0px 15px;
+        margin: 10px auto;
     }
-
     .title {
-        font-size: 30px; /* Adjust title size */
+        font-size: 30px;
     }
     .score-container,
     .best-container {
-        font-size: 20px; /* Adjust score font size */
-    }
-
-    /* CRITICAL: Make grid cells and tiles scale with percentages */
-    .grid-container {
-        width: 100%; /* Ensure grid container itself is fluid relative to .game-container */
-        height: auto; /* Let height adjust naturally */
-        padding: 5px; /* Example padding inside the grid container, adjust as needed */
-        box-sizing: border-box; /* Include padding in width/height calculation */
-    }
-
-    .grid-row {
-        display: flex; /* Makes cells in a row behave like flex items for proper distribution */
-        width: 100%; /* Ensure row takes full width of grid container */
-    }
-
-    .grid-cell {
-        width: 25%; /* Each cell is 1/4th of the row width */
-        height: 0; /* Set height to 0 to use padding-bottom for aspect ratio */
-        padding-bottom: 25%; /* This makes cells perfectly square, based on their width */
-        margin: 0; /* Remove any default margins that might cause gaps */
-        box-sizing: border-box; /* Include padding in width/height calculation */
-    }
-
-    /* Make the tiles within the grid cells also scale */
-    .tile {
-        /* These values are often set by JS for positioning, so !important might be needed for some */
-        width: 25%; /* Tile width should match cell width */
-        height: 0; /* Use padding-bottom for height */
-        padding-bottom: 25%;
-        /* If `left` and `top` are set by JavaScript with fixed pixels, this will be tricky.
-           We'll address that if needed. For now, try to make them relative if possible. */
-        left: 0 !important; /* Attempt to reset to 0 to allow scaling from left */
-        top: 0 !important; /* Attempt to reset to 0 to allow scaling from top */
-        transform: translate(0, 0) !important; /* Reset any JS transforms */
-        position: absolute; /* Keep absolute position to layer over grid cells */
-    }
-
-    .tile .tile-inner {
-        font-size: 40px; /* Adjust tile number font size */
-        /* Center content within the scaled tile */
-        position: absolute; /* Needed for width/height 100% */
-        width: 100%;
-        height: 100%;
-        display: flex; /* Use flexbox to center content */
-        justify-content: center; /* Horizontally center */
-        align-items: center; /* Vertically center */
+        font-size: 20px;
     }
 }
-
-/* Optional: Even smaller screens, if needed */
 @media (max-width: 380px) {
     .game-wrapper {
         padding: 10px 5px 0px 5px;
     }
     .title {
         font-size: 25px;
-    }
-    .tile .tile-inner {
-        font-size: 35px; /* Even smaller font for tiny screens */
     }
 }
 
