--- a/index.htm
+++ b/index.htm
@@ -69,7 +69,7 @@ body {
 @media (max-width: 500px) {
     .game-wrapper {
         max-width: 100%;
-        padding: 20px 15px 0px 15px;
+        padding: 20px 0 0 0; /* REMOVED HORIZONTAL PADDING */
         margin: 10px auto;
     }
     .title {
@@ -82,7 +82,7 @@ body {
 }
 @media (max-width: 380px) {
     .game-wrapper {
-        padding: 10px 5px 0px 5px;
+        padding: 10px 0 0 0;
     }
     .title {
         font-size: 25px;
@@ -134,6 +134,11 @@ body {
         line-height: calc(((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + 10px);
     }
 
+/* ADD THIS NEW BLOCK INSIDE THE @media screen and (max-width: 520px) BLOCK */
+    .tile .tile-inner {
+        outline: 2px solid red !important; /* TEMPORARY DIAGNOSTIC LINE */
+    }
+	
     /* Override specific tile positions with calculated translate values */
     /* The 'step' value for translation is (calculated_cell_width + calculated_margin_right) */
     /* We use !important to ensure these override main.css */
