--- a/index.htm
+++ b/index.htm
@@ -124,6 +124,8 @@ body {
     /* Apply margin-bottom proportionally to grid rows */
     .grid-row {
         margin-bottom: calc((100vw - 40px) / 28);
+		justify-content: flex-start !important;
+		flex-wrap: nowrap !important;
     }
     /* Remove margin from the last grid row */
     .grid-row:last-child {
