--- a/index.htm
+++ b/index.htm
@@ -111,36 +111,45 @@ body {
         padding: calc((100vw - 40px) / 28);
     }
 
-    /* Make grid cells responsive */
-    .grid-cell {
-        /* Calculate cell width: (total inner width - 3 gaps) / 4 cells */
-        width: calc((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4);
-        /* Keep grid cells square */
-        height: calc((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4);
-        /* Make margin-right proportional (same ratio as game-container padding) */
-        margin-right: calc((100vw - 40px) / 28);
-		outline: 2px solid blue !important;
-    }
-    /* Apply margin-bottom proportionally to grid rows */
-    .grid-row {
-        margin-bottom: calc((100vw - 40px) / 28);
-		justify-content: flex-start !important;
-		flex-wrap: nowrap !important;
-    }
-    /* Remove margin from the last grid row */
-    .grid-row:last-child {
-        margin-bottom: 0;
-    }
+.grid-cell {
+        /*
+         New calculation for cell width:
+         Total game-container width: (100vw - 40px)
+         game-container padding (P_gc): ((100vw - 40px) / 28)
+         Inner width for cells = (100vw - 40px) - (2 * P_gc)
+         We need 4 cells and 3 gaps. Each gap will be P_gc.
+         So: (4 * Cell_Width) + (3 * P_gc) = Inner width for cells
+         4 * Cell_Width = Inner width for cells - (3 * P_gc)
+         4 * Cell_Width = ((100vw - 40px) - (2 * P_gc)) - (3 * P_gc)
+         4 * Cell_Width = (100vw - 40px) - (5 * P_gc)
+         Cell_Width = ((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4
+        */
+        width: calc(((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) !important;
+        height: calc(((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) !important;
+        margin-right: 0 !important; /* IMPORTANT: Remove margin-right from cells, use gap instead */
+        outline: 2px solid blue !important;
+    }    
+
+.game-container .grid-row { /* Increased specificity to match main.css */
+        margin-bottom: calc((100vw - 40px) / 28) !important; /* Bottom margin for rows */
+        display: flex !important; /* Force flexbox layout */
+        flex-direction: row !important; /* Force horizontal alignment */
+        flex-wrap: nowrap !important; /* CRITICAL: Prevent cells from wrapping to next line */
+        justify-content: flex-start !important; /* Align cells to the beginning of the row */
+        gap: calc((100vw - 40px) / 28) !important; /* Use gap for spacing between cells */
+        padding: 0 !important; /* Ensure no extra padding within grid-row */
+    }
 
     /* Make tiles responsive and adjust their positioning */
-    .tile, .tile .tile-inner {
-        /* Tile width matches grid cell width, plus 1px for visual consistency with original */
-        width: calc(((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + 1px);
-        /* Keep tiles square */
-        height: calc(((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + 1px);
-        /* Adjust line-height for vertical centering of tile text */
-        line-height: calc(((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + 10px);
-    }
+
+.tile, .tile .tile-inner {
+        /* Tile width matches new grid cell width, plus 1px */
+        width: calc((((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + 1px) !important;
+        /* Keep tiles square */
+        height: calc((((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + 1px) !important;
+        /* Adjust line-height for vertical centering of tile text */
+        line-height: calc((((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + 10px) !important;
+    }
 
 /* ADD THIS NEW BLOCK INSIDE THE @media screen and (max-width: 520px) BLOCK */
     .tile .tile-inner {
@@ -148,27 +157,32 @@ body {
     }
 	
     /* Override specific tile positions with calculated translate values */
-    /* The 'step' value for translation is (calculated_cell_width + calculated_margin_right) */
-    /* We use !important to ensure these override main.css */
-    .tile-position-1-1 { transform: translate(0, 0) !important; }
-    .tile-position-1-2 { transform: translate(0, calc((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))) !important; }
-    .tile-position-1-3 { transform: translate(0, calc(2 * ((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))))) !important; }
-    .tile-position-1-4 { transform: translate(0, calc(3 * ((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))))) !important; }
+/* The 'step' value for translation is (calculated_cell_width + calculated_gap_width) */
+/* We use !important to ensure these override main.css */
 
-    .tile-position-2-1 { transform: translate(calc((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))), 0) !important; }
-    .tile-position-2-2 { transform: translate(calc((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))), calc((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))) !important; }
-    .tile-position-2-3 { transform: translate(calc((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))), calc(2 * ((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))))) !important; }
-    .tile-position-2-4 { transform: translate(calc((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))), calc(3 * ((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))))) !important; }
+/* Column 1 (X=0 steps horizontally) */
+.tile-position-1-1 { transform: translate(0, 0) !important; }
+.tile-position-1-2 { transform: translate(0, calc(1 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))) !important; }
+.tile-position-1-3 { transform: translate(0, calc(2 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))) !important; }
+.tile-position-1-4 { transform: translate(0, calc(3 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))) !important; }
 
-    .tile-position-3-1 { transform: translate(calc(2 * ((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))), 0) !important; }
-    .tile-position-3-2 { transform: translate(calc(2 * ((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))), calc((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))) !important; }
-    .tile-position-3-3 { transform: translate(calc(2 * ((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))), calc(2 * ((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))))) !important; }
-    .tile-position-3-4 { transform: translate(calc(2 * ((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))), calc(3 * ((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))))) !important; }
+/* Column 2 (X=1 step horizontally) */
+.tile-position-2-1 { transform: translate(calc(1 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))), 0) !important; }
+.tile-position-2-2 { transform: translate(calc(1 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))), calc(1 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))) !important; }
+.tile-position-2-3 { transform: translate(calc(1 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))), calc(2 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))) !important; }
+.tile-position-2-4 { transform: translate(calc(1 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))), calc(3 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))) !important; }
 
-    .tile-position-4-1 { transform: translate(calc(3 * ((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))), 0) !important; }
-    .tile-position-4-2 { transform: translate(calc(3 * ((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))), calc((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))) !important; }
-    .tile-position-4-3 { transform: translate(calc(3 * ((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))), calc(2 * ((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))))) !important; }
-    .tile-position-4-4 { transform: translate(calc(3 * ((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))), calc(3 * ((((100vw - 40px - (3 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))))) !important; }
+/* Column 3 (X=2 steps horizontally) */
+.tile-position-3-1 { transform: translate(calc(2 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))), 0) !important; }
+.tile-position-3-2 { transform: translate(calc(2 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))), calc(1 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))) !important; }
+.tile-position-3-3 { transform: translate(calc(2 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))), calc(2 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))) !important; }
+.tile-position-3-4 { transform: translate(calc(2 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))), calc(3 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))) !important; }
+
+/* Column 4 (X=3 steps horizontally) */
+.tile-position-4-1 { transform: translate(calc(3 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))), 0) !important; }
+.tile-position-4-2 { transform: translate(calc(3 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))), calc(1 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))) !important; }
+.tile-position-4-3 { transform: translate(calc(3 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))), calc(2 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))) !important; }
+.tile-position-4-4 { transform: translate(calc(3 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28))), calc(3 * (((100vw - 40px) - (5 * ((100vw - 40px) / 28))) / 4) + ((100vw - 40px) / 28)))) !important; }
 
     /* Adjust font sizes for tiles to scale proportionally */
     .tile .tile-inner {
