Fixed grid-cell specificity for mobile sizing, spacing, and outlines.

--- a/index.htm
+++ b/index.htm
@@ -101,7 +101,7 @@ body {
         padding: 0 10px; /* Add some side padding to the main container */
     }
 
-    .game-container {
+    .game-container .grid-cell {
         /* Calculate width based on viewport, leaving 20px margin on each side (total 40px) */
         width: calc(100vw - 40px);
         /* Keep it square by matching height to width */
