Re-enabled main.css as diagnostic showed it wasn't the direct issue.

--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>2048: Jessica Nigri Edition</title>
-  <link href="2048%20-%20Nigri_Files/main.css" rel="stylesheet" type="text/css">``
+  <link href="2048%20-%20Nigri_Files/main.css" rel="stylesheet" type="text/css">
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
   <script src="2048%20-%20Nigri_Files/jquery.min.js"></script>
 
