Refactor: Moved CSS and JS to dedicated folders, deleted old Nigri_Files directory.

--- a/index.htm
+++ b/index.htm
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>2048: Jessica Nigri Edition</title>
-  <link href="2048%20-%20Nigri_Files/main.css" rel="stylesheet" type="text/css">
+  <link href="css/main.css" rel="stylesheet" type="text/css">
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
-  <script src="2048%20-%20Nigri_Files/jquery.min.js"></script>
+  <script src="js/jquery.min.js"></script>
 
 <style>
 
@@ -398,7 +398,7 @@ $(document).keypress(function(event) {
   </div>
   
 
-  <script src="2048%20-%20Nigri_Files/glom.js"></script>
+  <script src="js/glom.js"></script>
 	 </div>
 </body>
-</html>
+</html><link href="2048%20-%20Nigri_Files/main.css" rel="stylesheet" type="text/css">
